--- a/ManagePass/PassManager.csproj
+++ b/ManagePass/PassManager.csproj
@@ -61,21 +61,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\ControllerPass.cs" />
-    <Compile Include="Controller\ControllerSignUp.cs" />
+    <Compile Include="Interfaces\IObservable.cs" />
+    <Compile Include="Interfaces\IObserver.cs" />
+    <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Model\ModelPass.cs" />
-    <Compile Include="Model\ModelSignUp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="SignUp.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SignUp.Designer.cs">
-      <DependentUpon>SignUp.cs</DependentUpon>
     </Compile>
     <Compile Include="View\SingIn.cs">
       <SubType>Form</SubType>
@@ -104,9 +99,6 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SignUp.resx">
-      <DependentUpon>SignUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\SingIn.resx">
       <DependentUpon>SingIn.cs</DependentUpon>
